# realgas-rs

./: .gitignore  Cargo.toml
bench/: main.rs  z.rs  zbench.rs
bench/exp/: z_air.csv  z_h2.csv  z_n2.csv  z_water.csv
lib/: eos.rs  gas.rs
src/: compounds.rs  eos.rs  gas.rs  lib.rs  molecules.rs
