[package]
name = "realgas"
version = "0.1.0"
edition = "2024"
default-run = "realgas"

[lib]
name = "realgas"
path = "lib/lib.rs"

[[bin]]
name = "realgas"
path = "bin/main.rs"
required-features = ["app"]

[[bin]]
name = "rg-bench"
path = "bench/main.rs"
required-features = ["bench"]

[features]
default = ["app"]
app = ["clap", "anyhow"]
bench = ["csv", "plotters"]

[dependencies]
roots = "0.0.8"
clap = { version = "4.5.42", features = ["derive"], optional=true }
anyhow = { version = "1.0.98", optional = true }
csv = { version="1.3.1", optional=true }
plotters = { version="0.3.7", optional=true }

[dev-dependencies]
float_eq = "1.0.1"
